--- a/lib/framework/package.json
+++ b/lib/framework/package.json
@@ -2,24 +2,13 @@
   "name": "koa2-framework",
   "version": "0.0.1",
   "dependencies": {
-    "koa": "~2.11.0",
-    "koa-router": "~9.1.0",
-    "koa-bodyparser": "~4.3.0",
-    "koa2-formidable": "~1.0.2",
-    "koa-static": "~5.0.0",
-    "koa-ejs": "~4.3.0",
-    "ioredis": "~4.16.0",
-    "log4js": "~6.1.2",
-    "promise": "~8.1.0",
-    "superagent": "~5.2.2",
-    "superagent-charset": "~1.2.0",
-    "koa-orm": "~3.0.2",
-    "mysql2": "^2.1.0",
-    "koa-session2": "~2.2.10",
-    "lodash": "~4.17.15",
-    "string": "~3.3.3",
-    "moment": "~2.24.0",
-    "iconv": "~3.0.0",
-    "crypto-js": "~4.0.0"
+    "koa2-strong": "^0.0.4",
+    "ioredis": "^4.17.3",
+    "superagent": "^6.1.0",
+    "superagent-charset": "^1.2.0",
+    "lodash": "^4.17.20",
+    "string": "^3.3.3",
+    "moment": "^2.29.0",
+    "crypto-js": "^4.0.0"
   }
 }
